// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing NewFolderModal component renders as expected with parameters (as closed) 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NewFolderModal
    handleNoButtonClick={[Function]}
    handleYesButtonClick={[Function]}
    isOpen={false}
    isRenaming={false}
    title="Title"
    toggle={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ModalFooterContent": [Function],
      "children": Array [
        <InputElement
          initialValue=""
          inputValue={[Function]}
          placeholder="Nom du dossier"
/>,
        <p
          className={undefined}
          hidden={true}
>
          Obligatoire
</p>,
      ],
      "className": "NewFolderModal",
      "handleNoButtonClick": [Function],
      "handleYesButtonClick": [Function],
      "isOpen": false,
      "isRenaming": false,
      "title": "Title",
      "toggle": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "initialValue": "",
          "inputValue": [Function],
          "placeholder": "Nom du dossier",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Obligatoire",
          "className": undefined,
          "hidden": true,
        },
        "ref": null,
        "rendered": "Obligatoire",
        "type": "p",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ModalFooterContent": [Function],
        "children": Array [
          <InputElement
            initialValue=""
            inputValue={[Function]}
            placeholder="Nom du dossier"
/>,
          <p
            className={undefined}
            hidden={true}
>
            Obligatoire
</p>,
        ],
        "className": "NewFolderModal",
        "handleNoButtonClick": [Function],
        "handleYesButtonClick": [Function],
        "isOpen": false,
        "isRenaming": false,
        "title": "Title",
        "toggle": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "initialValue": "",
            "inputValue": [Function],
            "placeholder": "Nom du dossier",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Obligatoire",
            "className": undefined,
            "hidden": true,
          },
          "ref": null,
          "rendered": "Obligatoire",
          "type": "p",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Array [],
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Testing NewFolderModal component renders as expected with parameters (as isRenaming) 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NewFolderModal
    handleNoButtonClick={[Function]}
    handleYesButtonClick={[Function]}
    isOpen={false}
    isRenaming={true}
    title="Title"
    toggle={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ModalFooterContent": [Function],
      "children": Array [
        <InputElement
          initialValue=""
          inputValue={[Function]}
          placeholder="Nom du dossier"
/>,
        <p
          className={undefined}
          hidden={true}
>
          Obligatoire
</p>,
      ],
      "className": "NewFolderModal",
      "handleNoButtonClick": [Function],
      "handleYesButtonClick": [Function],
      "isOpen": false,
      "isRenaming": true,
      "title": "Title",
      "toggle": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "initialValue": "",
          "inputValue": [Function],
          "placeholder": "Nom du dossier",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Obligatoire",
          "className": undefined,
          "hidden": true,
        },
        "ref": null,
        "rendered": "Obligatoire",
        "type": "p",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ModalFooterContent": [Function],
        "children": Array [
          <InputElement
            initialValue=""
            inputValue={[Function]}
            placeholder="Nom du dossier"
/>,
          <p
            className={undefined}
            hidden={true}
>
            Obligatoire
</p>,
        ],
        "className": "NewFolderModal",
        "handleNoButtonClick": [Function],
        "handleYesButtonClick": [Function],
        "isOpen": false,
        "isRenaming": true,
        "title": "Title",
        "toggle": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "initialValue": "",
            "inputValue": [Function],
            "placeholder": "Nom du dossier",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Obligatoire",
            "className": undefined,
            "hidden": true,
          },
          "ref": null,
          "rendered": "Obligatoire",
          "type": "p",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Array [],
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Testing NewFolderModal component renders as expected with parameters (as open) 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NewFolderModal
    handleNoButtonClick={[Function]}
    handleYesButtonClick={[Function]}
    isOpen={true}
    isRenaming={false}
    title="Title"
    toggle={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ModalFooterContent": [Function],
      "children": Array [
        <InputElement
          initialValue=""
          inputValue={[Function]}
          placeholder="Nom du dossier"
/>,
        <p
          className={undefined}
          hidden={true}
>
          Obligatoire
</p>,
      ],
      "className": "NewFolderModal",
      "handleNoButtonClick": [Function],
      "handleYesButtonClick": [Function],
      "isOpen": true,
      "isRenaming": false,
      "title": "Title",
      "toggle": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "initialValue": "",
          "inputValue": [Function],
          "placeholder": "Nom du dossier",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Obligatoire",
          "className": undefined,
          "hidden": true,
        },
        "ref": null,
        "rendered": "Obligatoire",
        "type": "p",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ModalFooterContent": [Function],
        "children": Array [
          <InputElement
            initialValue=""
            inputValue={[Function]}
            placeholder="Nom du dossier"
/>,
          <p
            className={undefined}
            hidden={true}
>
            Obligatoire
</p>,
        ],
        "className": "NewFolderModal",
        "handleNoButtonClick": [Function],
        "handleYesButtonClick": [Function],
        "isOpen": true,
        "isRenaming": false,
        "title": "Title",
        "toggle": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "initialValue": "",
            "inputValue": [Function],
            "placeholder": "Nom du dossier",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Obligatoire",
            "className": undefined,
            "hidden": true,
          },
          "ref": null,
          "rendered": "Obligatoire",
          "type": "p",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Array [],
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Testing NewFolderModal component renders as expected without parameters 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NewFolderModal />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ModalFooterContent": [Function],
      "children": Array [
        <InputElement
          initialValue=""
          inputValue={[Function]}
          placeholder="Nom du dossier"
/>,
        <p
          className={undefined}
          hidden={true}
>
          Obligatoire
</p>,
      ],
      "className": "NewFolderModal",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "initialValue": "",
          "inputValue": [Function],
          "placeholder": "Nom du dossier",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Obligatoire",
          "className": undefined,
          "hidden": true,
        },
        "ref": null,
        "rendered": "Obligatoire",
        "type": "p",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ModalFooterContent": [Function],
        "children": Array [
          <InputElement
            initialValue=""
            inputValue={[Function]}
            placeholder="Nom du dossier"
/>,
          <p
            className={undefined}
            hidden={true}
>
            Obligatoire
</p>,
        ],
        "className": "NewFolderModal",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "initialValue": "",
            "inputValue": [Function],
            "placeholder": "Nom du dossier",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Obligatoire",
            "className": undefined,
            "hidden": true,
          },
          "ref": null,
          "rendered": "Obligatoire",
          "type": "p",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Array [],
  Symbol(enzyme.__childContext__): null,
}
`;
